--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
 	{% endif %}
 
 	<div id='dForm' class="form">
-		<form action="/templates" method="POST">
+		<form action="/" method="POST">
 			<input type="text" name="content" id="content" />
 			<input type="submit" value="Add Task" />
 		</form>
