--- a/templates/base.html
+++ b/templates/base.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<link rel="icon" href="../base/assets/images/icons/petitchat.png" />
 		<!-- #region style sheets -->
 		<link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
+		<!-- 
 		<link rel="stylesheet" href="../front/css/chess.css" />
 		<link rel="stylesheet" href="../front/css/base.css" />
 		<link rel="stylesheet" href="../front/css/shapes.css" />
 		<link rel="stylesheet" href="../front/css/cards.css" />
 		<link rel="stylesheet" href="../front/css/features.css" />
-		<link rel="stylesheet" href="../front/css/table_jquery.css" />
+		<link rel="stylesheet" href="../front/css/table_jquery.css" /> -->
 		<!-- #endregion -->
-		<link rel="stylesheet" href="../templates/css/main.css" />
-    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"> -->
-    {% block head %}{% endblock %}
-</head>
-<body>
-    {% block body %}{% endblock %}
+		<!-- <link rel="stylesheet" href="../templates/css/main.css" /> -->
+		<!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"> -->
+
+		<!-- CSS only -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
+		<!-- <link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
+			integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7"
+			crossorigin="anonymous"
+		/> -->
+		{% block head %}{% endblock %}
+	</head>
+	<body>
+		{% block body %}{% endblock %}
 
 		<!-- #region alibs (=3rd party) includes -->
 		<script src="../base/alibs/jq3.js"></script>
@@ -38,8 +53,6 @@
 
 		<script src="../templates/js/start.js"></script>
 
-
 		<!-- #endregion includes -->
-
-</body>
+	</body>
 </html>
