--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,34 @@
 {% extends 'base.html' %} {% block head %}
 <title>Task Master</title>
 {% endblock %} {% block body %}
-<div id='dMain' class="content">
-	<h1 style="text-align: center">Task Master</h1>
+<div id="dMain" class="container text-center">
+	<h1 >Task Master</h1>
 	{% if tasks|length < 1 %}
-	<h4 style="text-align: center">There are no tasks. Create one below!</h4>
+	<h4>There are no tasks. Create one below!</h4>
 	{% else %}
-	<table>
-		<tr>
-			<th>Task</th>
-			<th>Added</th>
-			<th>Actions</th>
-		</tr>
-		{% for task in tasks %}
-		<tr>
-			<td>{{ task.content }}</td>
-			<td>{{ task.date_created.date() }}</td>
-			<td>
-				<a href="/delete/{{task.id}}">Delete</a>
-				<br />
-				<a href="/update/{{task.id}}">Update</a>
-			</td>
-		</tr>
-		{% endfor %}
-	</table>
+	<div id="dTable">
+		<table class="table">
+			<tr>
+				<th>Task</th>
+				<th>Added</th>
+				<th>Actions</th>
+			</tr>
+			{% for task in tasks %}
+			<tr>
+				<td>{{ task.content }}</td>
+				<td>{{ task.date_created.date() }}</td>
+				<td>
+					<a href="/delete/{{task.id}}">Delete</a>
+					<br />
+					<a href="/update/{{task.id}}">Update</a>
+				</td>
+			</tr>
+			{% endfor %}
+		</table>
+	</div>
 	{% endif %}
 
-	<div id='dForm' class="form">
+	<div id="dForm" class="form">
 		<form action="/" method="POST">
 			<input type="text" name="content" id="content" />
 			<input type="submit" value="Add Task" />
