--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 	{% else %}
 	<div id="dTable">
 		<table class="table">
-			<tr>
+			<tr class="bg-info">
 				<th>Task</th>
 				<th>Added</th>
 				<th>Actions</th>
