--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
 	<h4>There are no tasks. Create one below!</h4>
 	{% else %}
 	<div id="dTable">
-		<table class="table">
-			<tr class="bg-info">
+		<table class="table mt-5">
+			<tr>
 				<th>Task</th>
 				<th>Added</th>
 				<th>Actions</th>
