--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
+		<!-- <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css"> -->
 		<!-- #endregion style sheets -->
 
 		{% block head %}{% endblock %}
