--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 
 	<div id="dForm" class="form">
 		<form action="/" method="POST">
-			<input type="text" name="content" id="content" />
+			<input class='w-50' type="text" name="content" id="content" />
 			<input type="submit" value="Add Task" />
 		</form>
 	</div>
