--- a/templates/update.html
+++ b/templates/update.html
@@ -5,12 +5,12 @@
 {% endblock %}
 
 {% block body %}
-<div class="content">
+<div class="container text-center">
     <h1 style="text-align: center">Update Task</h1>
 
     <div class="form">
         <form action="/update/{{task.id}}" method="POST">
-            <input type="text" name="content" id="content" value="{{task.content}}">
+            <input class='w-50' type="text" name="content" id="content" value="{{task.content}}">
             <input type="submit" value="Update">
         </form>
     </div>
