--- a/templates/temp1/update.html
+++ b/templates/temp1/update.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'temp1/base.html' %}
 
 {% block head %}
 <title>Task Master</title>
@@ -9,7 +9,7 @@
     <h1 style="text-align: center">Update Task</h1>
 
     <div class="form">
-        <form action="/update/{{task.id}}" method="POST">
+        <form action="/t1/update/{{task.id}}" method="POST">
             <input class='w-50' type="text" name="content" id="content" value="{{task.content}}">
             <input type="submit" value="Update">
         </form>
