--- a/templates/temp0/base.html
+++ b/templates/temp0/base.html
@@ -8,7 +8,7 @@
 
 		<!-- #region style sheets -->
 		<link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
-		<link rel="stylesheet" href="../templates/css/main.css" />
+		<link rel="stylesheet" href="../templates/temp0/css/main.css" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -38,7 +38,7 @@
 		<script src="../front/js/cards.js"></script>
 		<script src="../front/js/features.js"></script>
 
-		<script src="../templates/js/start.js"></script>
+		<script src="../templates/temp0/js/start.js"></script>
 
 		<!-- #endregion includes -->
 	</body>
