--- a/templates/temp2/index.html
+++ b/templates/temp2/index.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./style.css" />
+		<link rel="stylesheet" href="../templates/temp2/style.css" />
 		<title>step 3 feedback</title>
 	</head>
 	<body>
 		<div class="container">
-			<img src="./logo.png" alt="Lexus" class="logo" />
+			<img src="../templates/temp2/logo.png" alt="Lexus" class="logo" />
 			{% if message %}
 			<p class="message">{{ message | safe }}</p>
 			{% endif %}
