--- a/templates/temp1/base.html
+++ b/templates/temp1/base.html
@@ -31,12 +31,12 @@
 		<script src="../base/alibs/jscolor.js"></script>
 		<!-- #endregion alibs includes -->
 		<!-- #region my includes -->
-		<script src="../front/js/_config.js"></script>
-		<script src="../front/js/globals.js"></script>
-		<script src="../front/js/base.js"></script>
-		<script src="../front/features/syms.js"></script>
-		<script src="../front/js/cards.js"></script>
-		<script src="../front/js/features.js"></script>
+		<script src="../base/js/_config.js"></script>
+		<script src="../base/js/globals.js"></script>
+		<script src="../base/js/base.js"></script>
+		<script src="../base/features/syms.js"></script>
+		<script src="../base/js/cards.js"></script>
+		<script src="../base/js/features.js"></script>
 
 		<script src="../templates/temp1/js/start.js"></script>
 
