--- a/templates/car/index.html
+++ b/templates/car/index.html
@@ -5,9 +5,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../templates/car/style.css" />
+		<link rel="stylesheet" href="../base/css/template_styles.css" />
 		<title>step 3 feedback</title>
 	</head>
 	<body>
+		<div class='topmenu'>
+			<a href="/todo">todolist</a>
+			<a href="/car">feedback</a>
+		</div>
 		<div class="container">
 			<img src="../templates/car/logo.png" alt="Lexus" class="logo" />
 			{% if message %}
