--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<ul class="nav navbar-nav">
-				<li><a href="/todo">todo list</a></li>
-				<li><a href="/car">car dealer feedback</a></li>
+				<li><a href="/todo">todolist</a></li>
+				<li><a href="/car">feedback</a></li>
 			</ul>
 		</div>
 	</nav>
