user example added

--- a/templates/car/index.html
+++ b/templates/car/index.html
@@ -12,6 +12,7 @@
 		<div class='topmenu'>
 			<a href="/todo">todolist</a>
 			<a href="/car">feedback</a>
+			<a href="/user">user</a>
 		</div>
 		<div class="container">
 			<img src="../templates/car/logo.png" alt="Lexus" class="logo" />
