--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,9 @@
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<ul class="nav navbar-nav">
-				<li><a href="/todo">todolist</a></li>
-				<li><a href="/car">feedback</a></li>
+				<li><a href="/car">car</a></li>
+				<li><a href="/todo">todo</a></li>
+				<li><a href="/user">user</a></li>
 			</ul>
 		</div>
 	</nav>
