--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- #region boilerplate / style sheets -->
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" href="../base/assets/images/icons/petitchat.png" />
 		<link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -13,36 +13,41 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="../base/css/template_styles.css" />
-		<title>step 4</title>
+		<!-- #endregion boilerplate / style sheets -->
+		<link rel="icon" href="../base/assets/images/icons/lillyfee1.jpg" />
+		<title>user</title>
 	</head>
-	<body style='font-family:opensans'>
-		<div class='topmenu'>
+	<body style="font-family: opensans">
+		<div class="topmenu">
 			<a href="/todo">todolist</a>
 			<a href="/car">feedback</a>
 			<a href="/user">user</a>
 		</div>
-	
+
 		<div class="container text-center">
 			<img src="../templates/todo/logo.png" alt="Lexus" class="logo" />
-			{% if tasks|length < 1 %}
-			<h4>There are no tasks. Create one below!</h4>
+			{% if users|length < 1 %}
+			<h4>There are no users. Create one below!</h4>
 			{% else %}
 		</div>
 		<div class="container">
 			<table class="table mt-5">
 				<tr>
-					<th>Task</th>
-					<th>Added</th>
-					<th>Actions</th>
+					<th>Name</th>
+					<th>Follows</th>
+					<th>Followers</th>
+					<th>Stars</th>
 				</tr>
-				{% for task in tasks %}
+				{% for user in users %}
 				<tr>
-					<td>{{ task.content }}</td>
-					<td>{{ task.date_created.date() }}</td>
+					<td>{{ user.name }}</td>
+					<td>{{ user.follows }}</td>
+					<td>{{ user.followers }}</td>
+					<td>{{ user.stars }}</td>
 					<td>
-						<a href="/deltodo/{{task.id}}">Delete</a>
+						<a href="/deluser/{{user.id}}">Delete</a>
 						<br />
-						<a href="/uptodo/{{task.id}}">Update</a>
+						<a href="/upuser/{{user.id}}">Update</a>
 					</td>
 				</tr>
 				{% endfor %}
@@ -53,12 +58,10 @@
 			{% if message %}
 			<p class="message">{{ message | safe }}</p>
 			{% endif %}
-			<form action="/todosubmit" method="POST">
+			<form action="/usersubmit" method="POST">
+				<div class="input-group">Add User:</div>
 				<div class="input-group">
-					Add Todo Item:
-				</div>
-				<div class="input-group">
-					<input class="form-control width100" type="text" name="content" placeholder="go shopping" />
+					<input class="form-control width100" type="text" name="name" placeholder="[enter user name]" />
 					<span class="input-group-btn">
 						<input type="submit" value="Submit" class="btn btn-info" />
 					</span>
