templates mit base

--- a/templates/car/index.html
+++ b/templates/car/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- #region boilerplate / style sheets -->
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../templates/car/style.css" />
 		<link rel="stylesheet" href="../base/css/template_styles.css" />
+		<!-- #endregion boilerplate / style sheets -->
+		<link rel="icon" href="../templates/car/logo.png" />
 		<title>step 3 feedback</title>
 	</head>
 	<body>
