--- a/templates/todo/index.html
+++ b/templates/todo/index.html
@@ -1,69 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" href="../base/assets/images/icons/petitchat.png" />
-		<link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-			crossorigin="anonymous"
-		/>
-		<link rel="stylesheet" href="../base/css/template_styles.css" />
-		<title>step 4</title>
-	</head>
-	<body style='font-family:opensans'>
-		<div class='topmenu'>
-			<a href="/todo">todolist</a>
-			<a href="/car">feedback</a>
-			<a href="/user">user</a>
+{% extends 'base.html' %}
+<!-- hier kommt head -->
+{% block icon_title %}
+<link rel="icon" href="../templates/todo/logo.png" />
+<title>step 4: todo</title>
+{% endblock %}
+<!-- hier kommt body -->
+{% block content %}
+<div class="container text-center">
+	<img src="../templates/todo/logo.png" alt="Lexus" class="logo" />
+	{% if tasks|length < 1 %}
+	<h4>There are no tasks. Create one below!</h4>
+	{% else %}
+</div>
+<div class="container">
+	<table class="table mt-5">
+		<tr>
+			<th>Task</th>
+			<th>Added</th>
+			<th>Actions</th>
+		</tr>
+		{% for task in tasks %}
+		<tr>
+			<td>{{ task.content }}</td>
+			<td>{{ task.date_created.date() }}</td>
+			<td>
+				<a href="/deltodo/{{task.id}}">Delete</a>
+				<br />
+				<a href="/uptodo/{{task.id}}">Update</a>
+			</td>
+		</tr>
+		{% endfor %}
+	</table>
+</div>
+{% endif %}
+<div class="container text-center">
+	{% if message %}
+	<p class="message">{{ message | safe }}</p>
+	{% endif %}
+	<form action="/todosubmit" method="POST">
+		<div class="input-group">Add Todo Item:</div>
+		<div class="input-group">
+			<input class="form-control width100" type="text" name="content" placeholder="go shopping" />
+			<span class="input-group-btn">
+				<input type="submit" value="Submit" class="btn btn-info" />
+			</span>
 		</div>
-	
-		<div class="container text-center">
-			<img src="../templates/todo/logo.png" alt="Lexus" class="logo" />
-			{% if tasks|length < 1 %}
-			<h4>There are no tasks. Create one below!</h4>
-			{% else %}
-		</div>
-		<div class="container">
-			<table class="table mt-5">
-				<tr>
-					<th>Task</th>
-					<th>Added</th>
-					<th>Actions</th>
-				</tr>
-				{% for task in tasks %}
-				<tr>
-					<td>{{ task.content }}</td>
-					<td>{{ task.date_created.date() }}</td>
-					<td>
-						<a href="/deltodo/{{task.id}}">Delete</a>
-						<br />
-						<a href="/uptodo/{{task.id}}">Update</a>
-					</td>
-				</tr>
-				{% endfor %}
-			</table>
-		</div>
-		{% endif %}
-		<div class="container text-center">
-			{% if message %}
-			<p class="message">{{ message | safe }}</p>
-			{% endif %}
-			<form action="/todosubmit" method="POST">
-				<div class="input-group">
-					Add Todo Item:
-				</div>
-				<div class="input-group">
-					<input class="form-control width100" type="text" name="content" placeholder="go shopping" />
-					<span class="input-group-btn">
-						<input type="submit" value="Submit" class="btn btn-info" />
-					</span>
-				</div>
-			</form>
-		</div>
-	</body>
-</html>
+	</form>
+</div>
+{% endblock %}
