--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -1,72 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<!-- #region boilerplate / style sheets -->
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-			crossorigin="anonymous"
-		/>
-		<link rel="stylesheet" href="../base/css/template_styles.css" />
-		<!-- #endregion boilerplate / style sheets -->
-		<link rel="icon" href="../base/assets/images/icons/lillyfee1.jpg" />
-		<title>user</title>
-	</head>
-	<body style="font-family: opensans">
-		<div class="topmenu">
-			<a href="/todo">todolist</a>
-			<a href="/car">feedback</a>
-			<a href="/user">user</a>
+{% extends 'base.html' %} 
+<!-- hier kommt head -->
+{% block icon_title %}
+<link rel="icon" href="../templates/todo/logo.png" />
+<title>user</title>
+{% endblock %} 
+<!-- hier kommt body -->
+{% block content %}
+<div class="container text-center">
+	<img src="../templates/todo/logo.png" alt="Lexus" class="logo" />
+	{% if users|length < 1 %}
+	<h4>There are no users. Create one below!</h4>
+	{% else %}
+</div>
+<div class="container">
+	<table class="table mt-5">
+		<tr>
+			<th>Name</th>
+			<th>Follows</th>
+			<th>Followers</th>
+			<th>Stars</th>
+		</tr>
+		{% for user in users %}
+		<tr>
+			<td>{{ user.name }}</td>
+			<td>{{ user.follows }}</td>
+			<td>{{ user.followers }}</td>
+			<td>{{ user.stars }}</td>
+			<td>
+				<a href="/deluser/{{user.id}}">Delete</a>
+				<br />
+				<a href="/upuser/{{user.id}}">Update</a>
+			</td>
+		</tr>
+		{% endfor %}
+	</table>
+</div>
+{% endif %}
+<div class="container text-center">
+	{% if message %}
+	<p class="message">{{ message | safe }}</p>
+	{% endif %}
+	<form action="/usersubmit" method="POST">
+		<div class="input-group">Add User:</div>
+		<div class="input-group">
+			<input class="form-control width100" type="text" name="name" placeholder="[enter user name]" />
+			<span class="input-group-btn">
+				<input type="submit" value="Submit" class="btn btn-info" />
+			</span>
 		</div>
-
-		<div class="container text-center">
-			<img src="../templates/todo/logo.png" alt="Lexus" class="logo" />
-			{% if users|length < 1 %}
-			<h4>There are no users. Create one below!</h4>
-			{% else %}
-		</div>
-		<div class="container">
-			<table class="table mt-5">
-				<tr>
-					<th>Name</th>
-					<th>Follows</th>
-					<th>Followers</th>
-					<th>Stars</th>
-				</tr>
-				{% for user in users %}
-				<tr>
-					<td>{{ user.name }}</td>
-					<td>{{ user.follows }}</td>
-					<td>{{ user.followers }}</td>
-					<td>{{ user.stars }}</td>
-					<td>
-						<a href="/deluser/{{user.id}}">Delete</a>
-						<br />
-						<a href="/upuser/{{user.id}}">Update</a>
-					</td>
-				</tr>
-				{% endfor %}
-			</table>
-		</div>
-		{% endif %}
-		<div class="container text-center">
-			{% if message %}
-			<p class="message">{{ message | safe }}</p>
-			{% endif %}
-			<form action="/usersubmit" method="POST">
-				<div class="input-group">Add User:</div>
-				<div class="input-group">
-					<input class="form-control width100" type="text" name="name" placeholder="[enter user name]" />
-					<span class="input-group-btn">
-						<input type="submit" value="Submit" class="btn btn-info" />
-					</span>
-				</div>
-			</form>
-		</div>
-	</body>
-</html>
+	</form>
+</div>
+{% endblock %}
