--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,8 @@
 	</head>
 	<body style="font-family: opensans">
 		<div class="topmenu">
-			<a href="/todo">todolist</a>
-			<a href="/car">feedback</a>
+			<a href="/car">car</a>
+			<a href="/todo">todo</a>
 			<a href="/user">user</a>
 		</div>
 
