--- a/templates/car/success.html
+++ b/templates/car/success.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<link rel="stylesheet" href="../templates/car/style.css" />
-		<title>Thank You!</title>
-	</head>
-	<body>
-		<div class="container">
-			<img src="../templates/car/logo.png" alt="" class="logo" />
-			<h1>Thank You!</h1>
-			<h2>Thank you for rating your experience. We hope to see you soon!</h2>
-		</div>
-	</body>
-</html>
+{% extends 'base.html' %}
+<!-- hier kommt head -->
+{% block icon_title %}
+<link rel="stylesheet" href="../templates/car/style.css" />
+<link rel="icon" href="../templates/car/logo.png" />
+<title>step 4: car</title>
+{% endblock %}
+<!-- hier kommt body -->
+{% block content %}
+<div class="container">
+	<img src="../templates/car/logo.png" alt="" class="logo" />
+	<h1>Thank You!</h1>
+	<h2>Thank you for rating your experience. We hope to see you soon!</h2>
+</div>
+{% endblock %}
