--- a/_messy/templates/base4.html
+++ b/_messy/templates/base4.html
@@ -6,19 +6,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
 		<link href="../base/alibs/bs4/bootstrap.min.css" rel="stylesheet" />
+		<!-- <link rel="stylesheet" href="../templates/template_styles.css" /> -->
 
 		{% block icon_title %} {% endblock %}
+		<!-- <link rel="icon" href="../templates/todo/logo.png" /> -->
+		<!-- <title>user</title> -->
 	</head>
 	<body>
 		<div class="topmenu" style='background:silver;padding-left:10px'>
-			<a href="/consens">consense</a>
+			<a href="/c1">consense</a>
 			<a href="/car">car</a>
 			<a href="/todo">todo</a>
 			<a href="/user">user</a>
 		</div>
 
 		{% block content %} {% endblock %}
-		<script src="../base/alibs/jq3.js"></script>
 		<script src="../base/alibs/bs4/bootstrap.bundle.min.js"></script>
 	</body>
 </html>
