--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,9 @@
 	</head>
 	<body>
 		<div class="topmenu" style='background:silver;padding-left:10px'>
-			<a href="/consens">consense</a>
+			<a href="/consens">consens</a>
 			<a href="/car">car</a>
+			<a href="/dash">dash</a>
 			<a href="/todo">todo</a>
 			<a href="/user">user</a>
 		</div>
