--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 			<a href="/consens">consens</a>
 			<a href="/car">car</a>
 			<a href="/dash">dash</a>
+			<a href="/mydash">my</a>
 			<a href="/todo">todo</a>
 			<a href="/user">user</a>
 		</div>
