--- a/templates/mydash/index.html
+++ b/templates/mydash/index.html
@@ -9,7 +9,7 @@
 {% block content %}
 <nav class="navbar navbar-dark bg-dark flex-md-nowrap p-0">
 	<a class="navbar-brand col-sm-3 col-md-2 m-0"  href="#">
-		<img class="filtertest" style="margin-top:-5px;height:25px;border-radius:50%" src="../templates/consens/group.png" />		
+		<img style="margin-top:-5px;height:25px;border-radius:50%" src="../templates/mydash/firetrans.png" />		
 		<!-- <img style="margin-top:-5px;height:22px;border-radius:50%" src="../templates/dash/logo.jpg" alt="" /> -->
 		<span style="margin-left:5px">Consensus</span></a>
 	<input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search" />
